--- a/_reset.scss
+++ b/_reset.scss
@@ -14,82 +14,3 @@
 body { margin: 0 }
 img  { width: 100% }
 svg  { max-height: 100% }
-
-input,
-select,
-textarea,
-fieldset,
-button {
-  font-family: inherit;
-  display: inherit;
-  font-size: 1rem;
-  border: none;
-  border-radius: 0;
-}
-
-label { vertical-align: middle; }
-
-select { -webkit-appearance: none; }
-
-textarea {
-  line-height: 1.75;
-  padding: .5rem .5rem;
-  vertical-align: top;
-}
-
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  max-width: 100%;
-  width: 100%;
-}
-
-th {
-  text-align: left;
-  font-weight: bold;
-}
-
-th,
-td {
-  padding: .25rem 1rem;
-  line-height: inherit;
-}
-
-th { vertical-align: bottom }
-td { vertical-align: top }
-
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 400;
-  margin-bottom: 1rem;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-li ul,
-li ol {
-  margin: 0 1rem;
-}
-
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ol {
-  list-style: lower-alpha;
-}
-
-ol ol ol {
-  list-style: lower-roman;
-}
-
-ol ol ol ol {
-  list-style: lower-alpha;
-}
