--- a/_typography.scss
+++ b/_typography.scss
@@ -20,6 +20,12 @@ $h6: $base-font-size !default;
   color: $accent;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+
 h1, .h1 { font-size: $h1; line-height: 1.2; }
 h2, .h2 { font-size: $h2; line-height: 1.3; }
 h3, .h3 { font-size: $h3; line-height: 1.4; }
@@ -53,6 +59,22 @@ h3 a, .h3 a {
   color: inherit;
   text-decoration: underline;
 }
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+//====================================================
+//  Lists
+//====================================================
+
+li ul, li ol { margin: 0 1rem; }
+ul { list-style-type: disc; }
+ol { list-style-type: decimal; }
+ol ol { list-style: lower-alpha; }
+ol ol ol { list-style: lower-roman; }
+ol ol ol ol { list-style: lower-alpha; }
 
 //====================================================
 //  Code
